fix: z-index of overlay

--- a/src/components/share/overlay/overlay.scss
+++ b/src/components/share/overlay/overlay.scss
@@ -1,6 +1,6 @@
 .overlay {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   pointer-events: none;
   padding-right: 40px;
   top: 0;
